# nerevarine_organizer

./: .clang-tidy  .clangd  .gitignore  CMakeLists.txt  README.md  build-appimage.sh  build-portable.sh  build-release.sh  build.sh  build_cross.sh  gen_moc.sh  install_linux.sh  main.cpp  nerevarine_organizer.desktop  nerevarine_organizer_build.desktop  nerevarine_prefs.ini  resources.qrc
.claude/: settings.local.json
.github/workflows/: appimage.yml  ci.yml  clang-tidy.yml  coverage.yml  release.yml  sanitizers.yml  test.yml  windows.yml
assets/icons/: comefroms.md  cystal_full_0 - edited.xcf
cmake/: toolchain-windows.cmake
compat/: glibc_compat.c  glibc_compat.ver
docs/release-notes/: 0.2.md  0.3.1.md  0.3.md  0.4.md  0.5.md  0.6.md
include/: annotation_codec.h  archive_magic.h  asset_collisions.h  async_guarded.h  backup_manager.h  backup_ops.h  bain.h  bainwizard.h  bethesda_archives.h  bethesda_custom_ini.h  bethesda_deploy.h  bethesda_loadorder.h  bsareader.h  bulk_install_queue.h  column_header.h  conflict_inspector.h  conflict_scan.h  deployment_report.h  deps_resolver.h  downloadqueue.h  extract_errors.h  filter_bar.h  firstrunwizard.h  fomod_copy.h  fomod_install.h  fomod_path.h  fomod_scripts.h  fomodwizard.h  forbidden_mods.h  fs_utils.h  game_adapter.h  game_profiles.h  ini_doc.h  install_layout.h  installcontroller.h  launch_warnings.h  load_order_merge.h  loadordercontroller.h  log_triage.h  log_triage_dialog.h  (+49 more)
packaging/: Dockerfile.portable  README.md
packaging/appimage/: build-appimage.sh
packaging/aur/: PKGBUILD  PKGBUILD-git
packaging/flatpak/: io.github.jalcazo.NerevarineOrganizer.yaml
scripts/: check_translation_parity.py  clang-tidy.sh  gen_translation_enum.sh  patch_glibc.py  prune-backups.sh  release-smoke.sh  sanitize.sh  translation_coverage.sh
src/: archive_magic.cpp  asset_collisions.cpp  backup_manager.cpp  backup_ops.cpp  bain.cpp  bainwizard.cpp  bethesda_archives.cpp  bethesda_custom_ini.cpp  bethesda_deploy.cpp  bethesda_loadorder.cpp  bsareader.cpp  bulk_install_queue.cpp  column_header.cpp  conflict_inspector.cpp  conflict_scan.cpp  deployment_report.cpp  deps_resolver.cpp  downloadqueue.cpp  extract_errors.cpp  filter_bar.cpp  firstrunwizard.cpp  fomod_copy.cpp  fomod_install.cpp  fomod_path.cpp  fomod_scripts.cpp  fomodwizard.cpp  forbidden_mods.cpp  game_adapters.cpp  game_profiles.cpp  ini_doc.cpp  install_layout.cpp  installcontroller.cpp  launch_warnings.cpp  load_order_merge.cpp  loadordercontroller.cpp  log_triage.cpp  log_triage_dialog.cpp  logging.cpp  mainwindow.cpp  mainwindow_config.cpp  (+49 more)
tests/: CMakeLists.txt  test_annotation_codec.cpp  test_asset_collisions.cpp  test_async.cpp  test_backup.cpp  test_bain.cpp  test_bethesda.cpp  test_bsa_reader.cpp  test_deps_resolver.cpp  test_extract.cpp  test_fomod.cpp  test_fomod_copy.cpp  test_fomod_install.cpp  test_fomod_path.cpp  test_fomod_scripts.cpp  test_fomod_wizard_ui.cpp  test_fs.cpp  test_fs_utils.cpp  test_game_adapters.cpp  test_harness.h  test_install_layout.cpp  test_launcher_cfg_writer.cpp  test_load_order.cpp  test_load_order_merge.cpp  test_log_triage.cpp  test_master_satisfaction.cpp  test_mod_naming.cpp  test_mod_sharing.cpp  test_modentry.cpp  test_modlist.cpp  test_modlist_io.cpp  test_modlist_model.cpp  test_modlist_profiles.cpp  test_modlist_serialization.cpp  test_modlist_sync_guard.cpp  test_mods.cpp  test_nexus.cpp  test_nexus_client.cpp  test_nxm.cpp  test_openmw_config.cpp  (+14 more)
translations/: english.ini
